--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "start": "next start",
     "lint": "next lint"
   },
+
+  
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "canvas": "^2.11.2",
     "icons": "^1.0.0",
     "next": "14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-pdf": "^7.6.0"
+  },
+  "resolutions": {
+    "webpack": "5.0.0"
   },
   "devDependencies": {
     "@react-three/drei": "^9.89.0",
